[package]
name = "cantelope"
version = "0.1.0"
edition = "2024"

[features]
socket = ["dep:socketcan"]

[dependencies]
socketcan = { version = '3.5.0', optional = true }
ctrlc = "3.4"
#dbc-rs = "0.4"
dbc-rs = { git = "https://github.com/Rombutan/dbc-rs.git" }
candump = { git = "https://github.com/Rombutan/candump-rs.git" }
arrow = { version = "57.2.0", default-features = false }
parquet = { version = "57.2.0", default-features = false, features = ["arrow"] }
